# givemethemoney

./: .env-example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  readme.md
backend/: .gitignore  CMakeLists.txt  Dockerfile  IMPLEMENTATION.md  build.sh  conanfile.txt  init.sql
backend/src/: main.cpp
backend/src/controller/: AuthController.hpp  BrokersController.hpp  PositionsController.hpp  StocksController.hpp
backend/src/database/: Database.cpp  Database.hpp
backend/src/dto/: DTOs.hpp
backend/src/repository/: BrokerRepository.hpp  MigrationRepository.hpp  PositionRepository.hpp  TransactionRepository.hpp  UserRepository.hpp
backend/src/utils/: CorsUtils.hpp  EmailUtils.hpp  HttpClient.hpp  JsonParser.hpp  JwtUtils.hpp  PasswordUtils.hpp
frontend/: .gitignore  Dockerfile  nginx.conf  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.tsx  index.css  index.js  index.tsx  theme.ts
frontend/src/components/: AddPositionForm.css  AddPositionForm.js  AddPositionForm.tsx  BrokerSettings.tsx  PortfolioAnalysis.tsx  PositionDetailModal.css  PositionDetailModal.js  PositionDetailModal.tsx  ProtectedRoute.js  ProtectedRoute.tsx  WindowedValueChart.tsx
frontend/src/context/: AuthContext.js  AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: Auth.css  Dashboard.css  Dashboard.js  Dashboard.tsx  Login.js  Login.tsx  Register.js  Register.tsx
frontend/src/types/: index.ts
frontend/src/utils/: currency.js  currency.ts  metrics.ts  portfolio.ts
